syntax = "proto3";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
package ocp.feedback.api;

option go_package = "github.com/ozoncp/ocp-feedback-api/pkg/ocp-feedback-api;ocp_feedback_api";

message Feedback {
    uint64 id = 1; 
    uint64 user_id = 2 [(validate.rules).uint64.gt = 0];
    uint64 classroom_id = 3 [(validate.rules).uint64.gt = 0];
    string comment = 4 [(validate.rules).string.min_len = 1];
}

message CreateFeedbackV1Request {
    Feedback feedback = 1 [(validate.rules).message.required = true];
}

message CreateFeedbackV1Response {
    uint64 feedback = 1 [(validate.rules).uint64.gt = 0];
}

message CreateMultiFeedbackV1Request {
    repeated Feedback feedbacks = 1 [(validate.rules).repeated.min_items = 1];
}

message CreateMultiFeedbackV1Response {
    repeated uint64 feedbacks = 1 [(validate.rules).repeated.min_items = 1];
}

message RemoveFeedbackV1Request {
    uint64 feedback = 1 [(validate.rules).uint64.gt = 0];
}

message RemoveFeedbackV1Response {
    // some fields may be added in the future
    // we'll use GRPC status code to indicate an error
}

message DescribeFeedbackV1Request {
    uint64 feedback = 1  [(validate.rules).uint64.gt = 0];
}

message DescribeFeedbackV1Response {
    Feedback feedback = 1 [(validate.rules).message.required = true];
}

message ListFeedbacksV1Request {
    uint64 limit = 1  [(validate.rules).uint64.gt = 0];
    uint64 offset = 2;
}

message ListFeedbacksV1Response {
    repeated Feedback feedbacks = 1;
}